--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    
+    <meta name="google-site-verification" content="jhXGiwPdFdOL2OLZxKkhr5EUdmlamIyFjPnHA6GNJ1g" />
     
 </head>
 
